# TabularShenanigans

./: .gitignore  1_data_prep.ipynb  3_ensemble.ipynb  LICENSE  Makefile  README.md  USAGE.md  config.binary.example.yaml  config.regression.example.yaml  config.yaml  dev.ipynb  gbdt.ipynb  main.py  pyproject.toml  test.ipynb
S4E11/: dev.ipynb
S4E12/: dev.ipynb
S4E5/: dev.ipynb
S4E6/: dev.ipynb
S4E6/architectures/: ResNet.py
S4E8/: dev.ipynb
S4E8/architectures/: Transformer.py
S4E8/checkpoints/: best.pth  latest.pth
S4E8/utils/: model_util.py
S5E1/: dev.ipynb  feature_engineering.ipynb
archive/S4E11/: dev.ipynb
archive/S4E12/: rmsle.py
archive/S4E6/: dev.ipynb
archive/S4E6/architectures/: SNN.py  Transformer.py
archive/S4E7/: dev.ipynb
archive/S4E8/checkpoints/: best.pth  latest.pth
archive/S4E8/utils/: data_util.py
archive/S4E9/: dev.ipynb
archive/S4E9/utils/: data_util.py  model_util.py
archive/S5E1/: eda.ipynb  feature_engineering.ipynb  stacking_ensemble.py
archive/S5E5/: dev.ipynb  eda.ipynb  feature_selecetion.ipynb  rmsle.py
archive/S6E2/: dev.ipynb
archive/various/: config.yaml  dev.ipynb  dev2.ipynb  pyproject.toml  social-action-recognition-in-mice.ipynb
archive/various/db/migrations/: 0_0_create_competitions_table.sql  0_1_create_datasets_table.sql
archive/various/src/: 1-init.ipynb  2-feature-engineering.ipynb  3-base-models.ipynb  4-ensemble.ipynb
archive/various/src/utils/: config.py  data.py
archive/various/tests/: test_config.py
configs/profiles/: remote_gpu.yaml
docs/: TARGET_GPU_SMOKE_VALIDATION.md  TECHNICAL_GUIDE.md
hist/: README.md
hist/configs/: global.yaml
hist/scripts/: sync_artifacts.sh
hist/tests/: test_clean_cli.py  test_prepare_report.py  test_runs.py  test_submission_validate.py
notebooks/: 01_local_experiment.ipynb
scripts/: benchmark_gpu_checkpoint.py  extract_audit_results.py  generate_sweep_candidates.py  install_lightgbm_cuda.sh  optimize_blend_weights.py  select_greedy_ensemble.py  validate_gpu_target_matrix.py  validate_lightgbm_cuda_build.py  verify_sweep_execution.py
src/: 1_data_prep.ipynb  2_base_models.ipynb  4-ensemble.ipynb  5-predict.ipynb
src/tabular_shenanigans/: __init__.py  _array_utils.py  _model_builders.py  _model_registry.py  _model_types.py  blend.py  bootstrap.py  bootstrap_config.py  candidate_artifacts.py  cli.py  competition.py  config.py  cv.py  data.py  eda.py  execution_routing.py  gpu_cuml_preprocess.py  gpu_preprocess.py  lightgbm_cuda_backend.py  mlflow_store.py  model_evaluation.py  models.py  naming.py  operator_properties.py  preprocess.py  preprocess_execution.py  runtime_execution.py  runtime_logging.py  screening.py  submission_history.py  submit.py  tracking.py  train.py  training_orchestration.py  tune.py
src/utils/: config.py  data.py
tests/: test_metrics.py  test_tuning.py
utils/: config.py  data.py  data_util.py
(+428 files in other folders)
