[project]
name = "tabularshenanigans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.0.0",
    "pandas>=3.0.1",
    "pydantic",
    "PyYAML",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = []
boosters = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
]
